--- a/src/optimistic-rollups-dodao-academy.yaml
+++ b/src/optimistic-rollups-dodao-academy.yaml
@@ -86,7 +86,7 @@ steps:
             key: 09206bad
           - content: Charging less gas fee
             key: 0be114b4
-        content: How did layer 1 benefit from the introduction of layer 2 frameworks?
+        content: How do we benefit from the introduction of layer 2 frameworks?
         type: MultipleChoice
         uuid: 3ad04dfa-fe73-4a56-99c1-ba0b65cb8205
     uuid: 92a00d69-a9ff-436c-99aa-f6a9b7abd50b
@@ -203,7 +203,7 @@ steps:
             key: e6908d80
           - content: Withdrawal
             key: e5f3ea4c
-        content:  If an users can unwind their positions and withdraw their funds is ensured by ?
+        content:  If an users can unwind their positions and withdraw their funds, is ensured by ?
         type: SingleChoice
         uuid: af0b2a47-8fe5-468e-b7a9-f3a90570320e
     uuid: 5d642a3f-5f46-4690-ab86-1854c75155e4
