--- a/src/ethereum-token-standards-dodao-academy.yaml
+++ b/src/ethereum-token-standards-dodao-academy.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Explains all the Tokens Standards that are famous in Ethereum
-created: '2022-12-16T19:19:40.428Z'
+created: '2023-01-12T14:30:14.937Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: course
@@ -145,8 +145,8 @@ steps:
     name: Popular Token Standards - Part 1
     stepItems: []
     uuid: 32be5757-083f-4c4e-a4c9-f5f82d3c75c7
-  - name: Evaluation
-    content: ""
+  - content: ''
+    name: Evaluation
     stepItems:
       - answerKeys:
           - B
@@ -166,9 +166,13 @@ steps:
       - answerKeys:
           - C
         choices:
-          - content: ERC-20 token standard is used developing fungible tokens on the Ethereum network
+          - content: >-
+              ERC-20 token standard is used developing fungible tokens on the
+              Ethereum network
             key: A
-          - content: functions and events are requirements to make ERC-20 and ERC-721 tokens 
+          - content: >-
+              functions and events are requirements to make ERC-20 and ERC-721
+              tokens
             key: B
           - content: Non-Fungible tokens are mutually interchangeable
             key: C
@@ -229,13 +233,15 @@ steps:
     name: Popular Token Standards - Part 2
     stepItems: []
     uuid: 48bac0da-6ef0-492b-b19c-87ab1b7df1ef
-  - name: Evaluation
-    content: ""
+  - content: ''
+    name: Evaluation
     stepItems:
       - answerKeys:
           - A
         choices:
-          - content: Through hooks, a contract can get tokens and be notified in a single transaction
+          - content: >-
+              Through hooks, a contract can get tokens and be notified in a
+              single transaction
             key: A
           - content: They are used to create a token
             key: B
@@ -253,7 +259,9 @@ steps:
             key: A
           - content: it prevents fund loss
             key: B
-          - content: both fungible tokens and non-fungible tokens can be created from a single deployed contract
+          - content: >-
+              both fungible tokens and non-fungible tokens can be created from a
+              single deployed contract
             key: C
           - content: ERC-1155 makes token transfer easy
             key: D
@@ -264,9 +272,11 @@ steps:
           - A
           - C
         choices:
-          - content: It optimises and unifies technical parameter of yield bearing vaults
+          - content: >-
+              It optimises and unifies technical parameter of yield bearing
+              vaults
             key: A
-          - content: It is used for renting out your NFTs 
+          - content: It is used for renting out your NFTs
             key: B
           - content: It will reduce integration efforts for developers
             key: C
@@ -402,13 +412,13 @@ steps:
     name: More Standards
     stepItems: []
     uuid: 4f81d68b-bf4b-432b-b9fe-06107921708a
-  - name: Evaluation
-    content: ""
+  - content: ''
+    name: Evaluation
     stepItems:
       - answerKeys:
           - B
         choices:
-          - content:  to prevent unintentional token sends to contracts
+          - content: to prevent unintentional token sends to contracts
             key: A
           - content: greater control over token circulation
             key: B
@@ -416,17 +426,25 @@ steps:
             key: C
           - content: to specify the owner of the token
             key: D
-        content: What feature of ERC-1404 gives more control to the creator as compared to ERC-20?
+        content: >-
+          What feature of ERC-1404 gives more control to the creator as compared
+          to ERC-20?
         type: SingleChoice
         uuid: ba8051eb-8e5a-448d-8d59-4984dd166e8f
       - answerKeys:
           - B
         choices:
-          - content: Allows for the creation of unique digital assets that cannot be replicated
+          - content: >-
+              Allows for the creation of unique digital assets that cannot be
+              replicated
             key: A
-          - content: Creators can earn benefits every time rights of thier object is used
+          - content: >-
+              Creators can earn benefits every time rights of thier object is
+              used
             key: B
-          - content: Aims to provide a way to register land and physical property on the Ethereum blockchain
+          - content: >-
+              Aims to provide a way to register land and physical property on
+              the Ethereum blockchain
             key: C
           - content: It helps to rent NFTs
             key: D
@@ -449,5 +467,5 @@ steps:
         uuid: e1b25c6f-cc99-489e-b9aa-4b367f91e914
     uuid: 12d8801c-0a89-4a79-8bba-edfd97b5d5b9
 thumbnail: >-
-  https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
+  https://d31h13bdjwgzxs.cloudfront.net/academy/dodao/guides/ethereum_token_standards.png
 uuid: ethereum-token-standards-dodao-academy
