--- a/src/optimistic-rollups-dodao-academy.yaml
+++ b/src/optimistic-rollups-dodao-academy.yaml
@@ -141,20 +141,21 @@ steps:
     name: Evaluation
     stepItems:
       - answerKeys:
-          - 07092eb0
+          - B
+          - C
         choices:
           - content: By paying more to validators
-            key: '05e83682'
+            key: A
           - content: By grouping multiple transactions together.
-            key: 07092eb0
+            key: B
           - content: >-
               By executing transactions outside the main ethereum chain, while
               submitting data to the base chain
-            key: '97301532'
-          - content: By increasing the number of active validators
-            key: d1b708e1
+            key: C
+          - content: By updating the way how Layer 1 works
+            key: D
         content: How do roll-ups improve the layer1 scalability?
-        type: SingleChoice
+        type: MultipleChoice
         uuid: 248af849-bc63-4f90-bccb-346c4d800bbe
     uuid: b5b08910-ba5e-440c-80de-30552bf4f645
   - content: >-
@@ -194,7 +195,7 @@ steps:
     name: Evaluation
     stepItems:
       - answerKeys:
-          - 96fc53b4
+          - e5f3ea4c
         choices:
           - content: Deposit
             key: e14833e1
@@ -202,11 +203,10 @@ steps:
             key: 96fc53b4
           - content: Update account balance.
             key: e6908d80
-          - content: Withdrawal
+          - content: Zero Transaction fees
             key: e5f3ea4c
         content: >-
-          If an users can unwind their positions and withdraw their funds is
-          ensured by ?
+          Which of these is not a property of Layer 2 bridges in Ethereum?
         type: SingleChoice
         uuid: af0b2a47-8fe5-468e-b7a9-f3a90570320e
     uuid: 5d642a3f-5f46-4690-ab86-1854c75155e4
@@ -255,7 +255,7 @@ steps:
         choices:
           - content: By validating the evidences through proof of work mechanism.
             key: 7bee6fff
-          - content: By validating the evidence provided during challenge time window.
+          - content: By keeping challenge time window to provide time for a challenger to send indisputable evidence
             key: 0449fcb9
           - content: >-
               By validating the evidence provided by the executor alongside the
@@ -311,17 +311,17 @@ steps:
     name: Evaluation
     stepItems:
       - answerKeys:
-          - 9b0493fa
+          - A
         choices:
-          - content: Sequencers
-            key: 1a95824f
-          - content: Executors
-            key: c038a5a7
-          - content: Validators
-            key: f00d64fb
-          - content: challengers
-            key: 9b0493fa
-        content: One-round fraud detection is made made by ?
+          - content: Availibility of list of intermediary state transitions for the commitment
+            key: A
+          - content: Faster hardware
+            key: B
+          - content: Partial list of state transitions
+            key: C
+          - content: Presenting evidence alongside the commitment as part of the rollup data
+            key: D
+        content: Which of these following properties enable One-round fraud detection?
         type: SingleChoice
         uuid: 73ab252e-af32-43ee-9e7b-158a95e20d19
     uuid: f49142fc-eddd-4116-9c25-01f365813d05
